[package]
name = "rskeyring_bind"
version = "0.2.0"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rskeyring_bind"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "*" # Last known working version "0.5"
features = ["extension-module"]

[dependencies]
keyring = "*" # Last known working version "0.9.0"
